--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/axiswolf/npm-lab-online-web-sp-000/issues"
   },
-  "homepage": "https://github.com/axiswolf/npm-lab-online-web-sp-000#readme"
+  "homepage": "https://github.com/axiswolf/npm-lab-online-web-sp-000#readme",
+  "dependencies": {
+    "moment": "^2.24.0"
+  }
 }
